--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/style.css">
   <script defer src="scripts/vue.min.js"></script>
   <script defer src="scripts/script.js"></script>
-    <title>Title</title>
+    <title>PnCK2</title>
 </head>
 <body>
+<div id="app">
+    <div class="note">
+        <p>wqeqweqwe</p>
+    </div>
+    <div class="note">
+        <p>wqeqweqwe</p>
+    </div>
+    <div class="note">
+        <p>wqeqweqwe</p>
+    </div>
+
+
+</div>
 
 </body>
 </html>
