--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
 </head>
 <body>
 <div id="app">
-    <div class="note">
-        <p>wqeqweqwe</p>
-    </div>
-    <div class="note">
-        <p>wqeqweqwe</p>
-    </div>
-    <div class="note">
-        <p>wqeqweqwe</p>
-    </div>
-
-
+    <notes></notes>
 </div>
 
 </body>
